{
    "name": "Input",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "7836a5a9-943b-4d9c-a287-f942e80b6f2a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "a454d8f5-1989-4317-bc03-579184808124",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Move",
                    "id": "fd16e1b9-f9e2-4025-b983-f0bd48ad1d16",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "192e4187-4f3a-447b-a0ce-96f1a9cc55a9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e10bb658-9931-4d58-8c8b-fc6fc20cb1c5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e0a38dd9-a0ad-4bda-934c-3d6d9ae188ba",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7e40c6f8-4493-4621-8083-476ff8416e61",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerActions",
            "id": "31a7398c-9f47-450a-9415-78f20a1ecf3b",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "66867c72-dc61-4949-8141-1ee2e3ba2a06",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4a14219d-61e9-4b69-861f-d40edc1717ac",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}